--- a/app/src/main/res/layout/custom.xml
+++ b/app/src/main/res/layout/custom.xml
@@ -1,17 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="wrap_content" android:padding="3dip">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:padding="3dip">
+
     <ImageView android:id="@+id/imgFace"
         android:layout_width="50dp"
         android:layout_gravity="center_vertical"
-
         android:layout_height="50dp"
-        android:src="@drawable/ic_launcher">
-    </ImageView>
-    <TextView android:id="@+id/imgName" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="8dp"
-       android:layout_gravity="center_vertical"
+        android:layout_margin="5sp"
+        android:src="@drawable/ic_launcher"/>
+
+    <TextView
+        android:id="@+id/imgName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:text="Text Here"
         android:textColor="#ffff"
-        android:text="Text Here">
-    </TextView>
+        android:textSize="15sp"
+        android:layout_marginLeft="16sp"/>
+
 </LinearLayout>
