--- a/app/src/main/res/layout/activity_directory.xml
+++ b/app/src/main/res/layout/activity_directory.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.NestedScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.twenty.four.crafts.DirectoryFragment">
-
-<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:focusableInTouchMode="true"
-    android:focusable="true"
     android:background="@mipmap/wall"
     android:fillViewport="true"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context="com.twenty.four.crafts.DirectoryFragment">
 
+
+              <LinearLayout
+                  android:orientation="vertical"
+                  android:layout_width="match_parent"
+                  android:layout_height="match_parent">
        <android.support.v4.view.ViewPager
            android:id="@+id/directoryViewPager"
            android:layout_width="match_parent"
@@ -26,9 +26,9 @@
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rv"/>
-
-</LinearLayout>
+              </LinearLayout>
 
 </android.support.v4.widget.NestedScrollView>
+
 
 
