--- a/app/src/main/res/layout/activity_subscribe_pop_up.xml
+++ b/app/src/main/res/layout/activity_subscribe_pop_up.xml
@@ -34,7 +34,7 @@
         android:layout_marginTop="20dp"
         android:layout_below="@id/subscribe_text"
         android:textSize="18sp"
-        android:gravity="center_horizontal"
+        android:gravity="left"
         android:text="Subscribe to 24Crafts to enjoy using the app's features. Subscription allows Producers/Directors to find you...."/>
 
     <RelativeLayout
@@ -45,7 +45,8 @@
 
         <Button
             android:id="@+id/SubscribeButton"
-            android:layout_width="130dp"
+            android:layout_width="100dp"
+            android:textSize="10sp"
             android:onClick="purchasecoinsIntent"
             android:layout_alignParentLeft="true"
             android:layout_height="wrap_content"
@@ -57,8 +58,9 @@
             android:layout_alignParentBottom="true"
             android:id="@+id/ContinueButton"
             android:text="Continue Free"
+            android:textSize="10sp"
             android:layout_alignParentRight="true"
-            android:layout_width="130dp"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:onClick="launchIntent"/>
 
