--- a/app/src/main/res/layout/activity_rate_us.xml
+++ b/app/src/main/res/layout/activity_rate_us.xml
@@ -8,7 +8,7 @@
     android:padding="15dp"
     tools:context="com.twenty.four.crafts.RateUs">
 
-    <ImageView
+   <!-- <ImageView
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:id="@+id/rateusimage"
@@ -38,5 +38,5 @@
         android:layout_marginTop="10dp"
         android:text="SUBMIT"
         android:layout_alignParentRight="true"
-        android:layout_below="@id/descriptionEdittext"/>
+        android:layout_below="@id/descriptionEdittext"/>-->
 </RelativeLayout>
